# API

./: RAG.ipynb  Travel_Agent.ipynb  gemini_flah_2_0.ipynb  new_gemini_api_testing.ipynb
fastapi-todo/: pyproject.toml
fastapi-todo/fastapi_todo/: main.py
fastapi-todo/tests/: test_main.py
fastapi_database/: pyproject.toml
fastapi_database/fastapi_database/: .env  main.py  settings.py
