[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = ""
authors = ["Muhammad Haider <114966406+iamhaider072@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
httpie = "^3.2.2"
pytest = "^8.1.1"
sqlmodel = "^0.0.16"
ngrok = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
