[tool.poetry]
name = "fastapi-database"
version = "0.1.0"
description = ""
authors = ["Muhammad Haider <114966406+iamhaider072@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
sqlmodel = "^0.0.16"
pytest = "^8.1.1"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
httpie = "^3.2.2"
fastapi = "^0.110.2"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.29"
psycopg = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
